# arch-javid-installer

./: README.md  pyproject.toml
.github/workflows/: build.yml
arch_javid_installer/: helpers.py  installer_engine.py  installer_wizard.py  logging_setup.py  main.py  models.py  shell.py
arch_javid_installer/pages/: __init__.py  disk.py  finish.py  install.py  keyboard.py  location.py  summary.py  user.py  welcome.py
docs/: SMG.md
scripts/chroot/: bootloader.sh  keyboard.sh  locale.sh  nvidia.sh  services.sh  user.sh  users.sh
scripts/system/: base.sh  chroot.sh  fstab.sh  makefs.sh  mount.sh  partition.sh  unmount.sh
tests/: test_helpers.py  test_main.py  test_shell.py
